[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lolexport"
version = "0.1.3"
description = "Exports League of Legends Match History data using the RiotGames API"
authors = [{ name = "purarue" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["api"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = ["click>=8.0", "logzero", "riotwatcher", "backoff", "IPython"]

[project.optional-dependencies]
testing = ["mypy", "flake8"]

[project.urls]
Homepage = "https://github.com/purarue/lolexport"

[project.scripts]
lolexport = "lolexport.cli:main"

[tool.setuptools]
packages = ["lolexport"]
zip-safe = false

[tool.setuptools.package-data]
lolexport = ["py.typed"]

[tool.mypy]
pretty = true
disallow_any_generics = false
show_error_context = true
show_error_codes = true
namespace_packages = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
